--- a/steal-a-brainrot.html
+++ b/steal-a-brainrot.html
@@ -19,10 +19,10 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/99-nights-in-the-forest1.png">
-    <title>Steal a Brainrot - 99 Nights in the Forest</title>
+    <title>Steal a Brainrot</title>
     <meta name="keywords" content="steal a brainrot">
     <meta name="news_keywords" content="steal a brainrot">
-    <meta name="description" content="Steal a Brainrot - 99 Nights in the Forest">
+    <meta name="description" content="Steal Brainrot Online is a thrilling multiplayer chaos fest on Roblox, where players dive into a world of absurd Italian and Indonesian brainrot memes turned into collectible treasures.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -216,3 +216,4 @@
 </body>
 
 </html>
+
