--- a/call-99-nights-in-the-forest.html
+++ b/call-99-nights-in-the-forest.html
@@ -19,10 +19,10 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/99-nights-in-the-forest1.png">
-    <title>Call 99 Nights in the Forest - 99 Nights in the Forest</title>
+    <title>Call 99 Nights in the Forest</title>
     <meta name="keywords" content="call 99 nights in the forest">
     <meta name="news_keywords" content="call 99 nights in the forest">
-    <meta name="description" content="Call 99 Nights in the Forest - 99 Nights in the Forest">
+    <meta name="description" content="Call 99 Nights in the Forest is a captivating Roblox puzzle game that blends the addictive mechanics of 2048 with the eerie universe of 99 Nights in the Forest.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -214,3 +214,4 @@
 </body>
 
 </html>
+
