--- a/five-nights-at-freddys-2.html
+++ b/five-nights-at-freddys-2.html
@@ -19,10 +19,10 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/99-nights-in-the-forest1.png">
-    <title>Five Nights At Freddy's 2 - 99 Nights in the Forest</title>
+    <title>Five Nights At Freddy's 2</title>
     <meta name="keywords" content="five nights at freddy's 2">
     <meta name="news_keywords" content="five nights at freddy's 2">
-    <meta name="description" content="Five Nights At Freddy's 2 - 99 Nights in the Forest">
+    <meta name="description" content="Five Nights at Freddy’s 2 (FNaF 2) is a survival horror game developed by Scott Cawthon, where you play as a night guard facing creepy animatronics. Released in 2014, it challenges players to survive five tense nights. ">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -222,3 +222,4 @@
 </body>
 
 </html>
+
