--- a/99-nights-in-the-woods-horror-story-original.html
+++ b/99-nights-in-the-woods-horror-story-original.html
@@ -22,7 +22,7 @@
     <title>99 Nights In The Woods: Horror Story Original - 99 Nights in the Forest</title>
     <meta name="keywords" content="99 nights in the woods: horror story original">
     <meta name="news_keywords" content="99 nights in the woods: horror story original">
-    <meta name="description" content="99 Nights In The Woods: Horror Story Original - 99 Nights in the Forest">
+    <meta name="description" content="99 Nights In The Woods: Horror Story Original is a chilling Roblox survival horror game where you must endure 99 nights in a haunted forest, facing the Man-Eating Deer, aka Skinwalker, and other eerie creatures. Launched in 2025, it tests your wits with intense nighttime survival challenges.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -215,3 +215,4 @@
 </body>
 
 </html>
+
