--- a/99-nights-in-the-woods-horror-story-original.html
+++ b/99-nights-in-the-woods-horror-story-original.html
@@ -19,7 +19,7 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/99-nights-in-the-forest1.png">
-    <title>99 Nights In The Woods: Horror Story Original - 99 Nights in the Forest</title>
+    <title>99 Nights In The Woods: Horror Story Original</title>
     <meta name="keywords" content="99 nights in the woods: horror story original">
     <meta name="news_keywords" content="99 nights in the woods: horror story original">
     <meta name="description" content="99 Nights In The Woods: Horror Story Original is a chilling Roblox survival horror game where you must endure 99 nights in a haunted forest, facing the Man-Eating Deer, aka Skinwalker, and other eerie creatures. Launched in 2025, it tests your wits with intense nighttime survival challenges.">
@@ -215,4 +215,5 @@
 </body>
 
 </html>
+
 
