--- a/fnaf-five-nights-at-freddys.html
+++ b/fnaf-five-nights-at-freddys.html
@@ -19,10 +19,10 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/99-nights-in-the-forest1.png">
-    <title>FNAF | Five Nights At Freddy's - 99 Nights in the Forest</title>
+    <title>FNAF | Five Nights At Freddy's</title>
     <meta name="keywords" content="fnaf | five nights at freddy's">
     <meta name="news_keywords" content="fnaf | five nights at freddy's">
-    <meta name="description" content="FNAF | Five Nights At Freddy's - 99 Nights in the Forest">
+    <meta name="description" content="Five Nights at Freddy’s (FNaF) is a survival horror game developed by Scott Cawthon, where you play as a night guard facing terrifying animatronics. Launched in 2014, it immerses you in a tense atmosphere, challenging your survival skills.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -221,3 +221,4 @@
 </body>
 
 </html>
+
