--- a/99-nights-in-the-forest-horror-multiplayer.html
+++ b/99-nights-in-the-forest-horror-multiplayer.html
@@ -19,10 +19,10 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/99-nights-in-the-forest1.png">
-    <title>99 Nights in the Forest. Horror Multiplayer - 99 Nights in the Forest</title>
+    <title>99 Nights in the Forest. Horror Multiplayer</title>
     <meta name="keywords" content="99 nights in the forest. horror multiplayer">
     <meta name="news_keywords" content="99 nights in the forest. horror multiplayer">
-    <meta name="description" content="99 Nights in the Forest. Horror Multiplayer - 99 Nights in the Forest">
+    <meta name="description" content="99 Nights in the Forest: Horror Multiplayer is a chilling Roblox survival horror game where you join a search party to rescue missing children in a dark, eerie forest. Face the terrifying Man-Eating Deer, Skinwalker, and survive 99 nights through teamwork.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -233,3 +233,4 @@
 </body>
 
 </html>
+
