--- a/hollow-knight.html
+++ b/hollow-knight.html
@@ -22,7 +22,7 @@
     <title>Hollow Knight - 99 Nights in the Forest</title>
     <meta name="keywords" content="hollow knight">
     <meta name="news_keywords" content="hollow knight">
-    <meta name="description" content="Hollow Knight - 99 Nights in the Forest">
+    <meta name="description" content="Hollow Knight, released on February 25, 2017, by Team Cherry, is an electrifying action game that plunges you into a shadowy, thrilling journey. As the Knight, you explore the fallen kingdom of Hallownest, a land brimming with secrets and perils.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -227,3 +227,4 @@
 </body>
 
 </html>
+
