--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <meta name="distribution" content="Global">
     <meta http-equiv="audience" content="General">
     <link rel="icon" href="rs/imgs/99-nights-in-the-forest1.png">
-    <title>99 Nights in the Forest - 99 Nights in the Forest</title>
+    <title>99 Nights in the Forest</title>
     <meta name="keywords" content="99 nights in the forest">
     <meta name="news_keywords" content="99 nights in the forest">
-    <meta name="description" content="99 Nights in the Forest - 99 Nights in the Forest">
+    <meta name="description" content="99 Nights in the Forest is an intense survival horror game where players must endure 99 grueling nights in a mysterious, danger-filled wilderness.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -287,3 +287,4 @@
 </body>
 
 </html>
+
