--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <p><strong>Exploration and Quests:</strong> Venture into dungeons, abandoned buildings, and foggy areas to find loot, maps, and lost children. Rescuing kids reduces the required nights, and trading with NPCs like the Pelt Trader (using items like Rabbit's Feet) yields upgrades such as better axes or sacks.</p>
 <p><strong>Class System and Customization:</strong> Start with affordable classes like Scavenger for extra inventory space (only 25 Diamonds). Redeem codes for free Diamonds to unlock premium classes, talent rerolls, and cosmetic enhancements.</p>
 <p><strong>Horror Elements and Updates</strong>: Face jumpscares from flying Owls or demonic Deer; recent patches (e.g., September 22, 2025) introduce volcanic biomes, new entities, and multiplayer co-op for shared base-building.</p>
-<p><img src="http://thamgithub.comrs/imgs/99-nights-in-the-forest.png" alt="Features of 99 Nights in the Forest" width="512" height="512" /></p>
+<p><img src="https://fivenightsatfreddys2.org/data/image/99-nights-in-the-forest-fnaf2.jpg" alt="Features of 99 Nights in the Forest" width="512" height="512" /></p>
 <h2>How to Survive 99 Nights in the Forest</h2>
 <p>Surviving the full 99 nights requires strategy, caution, and quick thinking. Here's a step-by-step guide blending core mechanics from the wilderness horrors:</p>
 <ul>
@@ -287,4 +287,5 @@
 </body>
 
 </html>
+
 
