--- a/99-nights-in-the-forest-horror-multiplayer.html
+++ b/99-nights-in-the-forest-horror-multiplayer.html
@@ -12,7 +12,7 @@
   gtag('config', 'G-EYS9RPNN3M');
 </script>
     <meta charset="utf-8">
-	<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/99-nights-in-the-forest-horror-multiplayer.html">
+	<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/99-nights-in-the-forest-horror-multiplayer">
     <script type="text/javascript">
         window.location.href = "https://99nightsforest.io"
     </script> 
@@ -237,5 +237,6 @@
 </body>
 
 </html>
+
 
 
