--- a/call-99-nights-in-the-forest.html
+++ b/call-99-nights-in-the-forest.html
@@ -12,6 +12,10 @@
   gtag('config', 'G-EYS9RPNN3M');
 </script>
     <meta charset="utf-8">
+		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/call-99-nights-in-the-forest.html">
+    <script type="text/javascript">
+        window.location.href = "https://99nightsforest.io"
+    </script> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="content-language" content="en">
@@ -214,4 +218,5 @@
 </body>
 
 </html>
+
 
