--- a/call-99-nights-in-the-forest.html
+++ b/call-99-nights-in-the-forest.html
@@ -12,7 +12,7 @@
   gtag('config', 'G-EYS9RPNN3M');
 </script>
     <meta charset="utf-8">
-		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/call-99-nights-in-the-forest.html">
+		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/call-99-nights-in-the-forest">
     <script type="text/javascript">
         window.location.href = "https://99nightsforest.io"
     </script> 
@@ -218,5 +218,6 @@
 </body>
 
 </html>
+
 
 
