--- a/five-nights-at-freddys-2.html
+++ b/five-nights-at-freddys-2.html
@@ -12,7 +12,7 @@
   gtag('config', 'G-EYS9RPNN3M');
 </script>
     <meta charset="utf-8">
-		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/five-nights-at-freddys-2.html">
+		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/five-nights-at-freddys-2">
     <script type="text/javascript">
         window.location.href = "https://99nightsforest.io"
     </script> 
@@ -226,5 +226,6 @@
 </body>
 
 </html>
+
 
 
