--- a/fnaf-five-nights-at-freddys.html
+++ b/fnaf-five-nights-at-freddys.html
@@ -12,7 +12,7 @@
   gtag('config', 'G-EYS9RPNN3M');
 </script>
     <meta charset="utf-8">
-		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/fnaf-five-nights-at-freddys.html">
+		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/fnaf-five-nights-at-freddys">
     <script type="text/javascript">
         window.location.href = "https://99nightsforest.io"
     </script> 
@@ -225,5 +225,6 @@
 </body>
 
 </html>
+
 
 
