--- a/five-nights-at-freddys-2.html
+++ b/five-nights-at-freddys-2.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
 		<meta http-equiv="refresh" content="0; url=https://99nights-intheforest.github.io/five-nights-at-freddys-2">
     <script type="text/javascript">
-        window.location.href = "https://99nightsforest.io"
+        window.location.href = "https://99nightsforest.io/five-nights-at-freddys"
     </script> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -226,6 +226,7 @@
 </body>
 
 </html>
+
 
 
 
